--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^3.6.2"
   },
   "dependencies": {
+    "@unocss/nuxt": "^0.53.5",
     "dayjs": "^1.11.9",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2"
