--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@unocss/nuxt": "^0.53.5",
+    "chart.js": "^4.3.0",
     "dayjs": "^1.11.9",
     "sass": "^1.63.6",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^13.3.2",
+    "vue-chartjs": "^5.2.0"
   }
 }
